1.Fix for distorted list

--- a/angular-multi-select.css
+++ b/angular-multi-select.css
@@ -173,6 +173,10 @@ label.multiSelect span:hover {
     width:22px;
 }
 
+.filterButtonsContainerDiv {
+    float: left;
+}
+
 .selectedFilterDiv {
     float: right;
 }
